fixed collapse issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,10 @@ body{
       #242F40 100%
     );
 }
+
+.navbar-bg {
+    background-color: #A1A1A1 !important;
+}
   
 .text-align-end {
     text-align: end;
@@ -56,7 +60,7 @@ body{
 }
 
 #profile-pic {
-    width: 20%;
+    width: 25%;
     height: 23vh;
 }
 
